fixed slot styling on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -38,3 +38,7 @@
 .tinyText {
   font-size: 0.5rem;
 }
+
+.topBarbuttons{
+  margin-left: 2rem;
+}
