--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,7 @@ code {
 .tinyText {
   font-size: 0.5rem;
 }
+
+.topBarbuttons{
+  margin-left: 2rem;
+}
